<resources>
    <string name="app_name">Пилюлькин</string>
    
    <!-- Role Selection -->
    <string name="role_selection_title">Умная аптечка</string>
    <string name="role_selection_subtitle">Выберите режим работы</string>
    <string name="role_patient">Пациент</string>
    <string name="role_doctor">Врач</string>
    <string name="role_patient_description">Управление домашней аптечкой</string>
    <string name="role_doctor_description">Доступ к аптечке пациента</string>
    
    <!-- Medicine List -->
    <string name="medicine_list_title">Моя аптечка</string>
    <string name="medicine_search_hint">Поиск лекарства по аптечке...</string>
    <string name="medicine_empty">Аптечка пуста</string>
    <string name="medicine_empty_description">Добавьте первое лекарство</string>
    <string name="add_medicine">Добавить</string>
    <string name="sort_by_name">По названию</string>
    <string name="sort_by_date">По сроку годности</string>
    
    <!-- Add/Edit Medicine -->
    <string name="add_medicine_title">Новое лекарство</string>
    <string name="edit_medicine_title">Редактирование</string>
    <string name="medicine_name">Название</string>
    <string name="medicine_name_hint">Введите название лекарства</string>
    <string name="search_medicine_hint">Поиск по справочнику лекарств...</string>
    <string name="search_type_diagnosis_hint">Введите симптом или диагноз...</string>
    <string name="search_type_medicine_hint">Поиск по справочнику лекарств...</string>
    <string name="add_custom_medicine">Добавить свой препарат</string>
    <string name="custom_medicine_name_required">Название обязательно</string>
    <string name="custom_medicine_active_substance_hint">Действующее вещество (необязательно)</string>
    <string name="search">Найти</string>
    <string name="medicine_dosage">Дозировка</string>
    <string name="medicine_dosage_hint">Например: 500 мг</string>
    <string name="medicine_expiration">Срок годности</string>
    <string name="medicine_quantity">Количество</string>
    <string name="medicine_quantity_hint">Количество в упаковке</string>
    <string name="medicine_form">Форма выпуска</string>
    <string name="medicine_form_hint">Таблетки, капсулы, сироп...</string>
    <string name="medicine_comment">Комментарий</string>
    <string name="medicine_comment_hint">Дополнительная информация</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="select_date">Выбрать дату</string>
    
    <!-- Medicine Detail -->
    <string name="medicine_detail_title">Информация о лекарстве</string>
    <string name="medicine_status_valid">Годно</string>
    <string name="medicine_status_expired">Просрочено</string>
    <string name="medicine_status_expiring_soon">Скоро истекает</string>
    <string name="edit">Редактировать</string>
    
    <!-- Patient Profile -->
    <string name="profile_title">Профиль пациента</string>
    <string name="profile_name">Имя</string>
    <string name="profile_name_hint">Введите ваше имя</string>
    <string name="profile_age">Возраст</string>
    <string name="profile_age_hint">Введите возраст</string>
    <string name="profile_allergies">Аллергии</string>
    <string name="profile_allergies_hint">Укажите аллергии на лекарства</string>
    <string name="profile_contraindications">Противопоказания</string>
    <string name="profile_contraindications_hint">Укажите противопоказания</string>
    <string name="profile_notes">Заметки</string>
    <string name="profile_notes_hint">Дополнительная информация</string>
    
    <!-- Generate Code -->
    <string name="generate_code_title">Код доступа для врача</string>
    <string name="generate_code_description">Создайте временный код для предоставления врачу доступа к Вашей аптечке</string>
    <string name="generate_code_button">Сгенерировать код</string>
    <string name="code_validity">Код действителен 1 час</string>
    <string name="copy_code">Скопировать код</string>
    <string name="code_copied">Код скопирован</string>
    
    <!-- Doctor Code Entry -->
    <string name="doctor_code_title">Вход по коду</string>
    <string name="doctor_code_hint">Введите код пациента</string>
    <string name="doctor_code_submit">Войти</string>
    
    <!-- Doctor Medicine List -->
    <string name="doctor_medicine_list_title">Аптечка пациента</string>
    
    <!-- Doctor Search -->
    <string name="doctor_search_title">Подбор лекарств</string>
    <string name="doctor_search_description">Введите диагноз или название препарата</string>
    <string name="doctor_search_hint">Введите запрос...</string>
    <string name="search_type_diagnosis">По симптомам/диагнозу</string>
    <string name="search_type_medicine">По названию/действующему веществу</string>
    <string name="search_button">Найти</string>
    
    <!-- Recommendation Results -->
    <string name="recommendation_results_title">Результаты подбора</string>
    <string name="recommendation_empty">Ничего не найдено</string>
    <string name="recommendation_empty_description">В аптечке нет подходящих лекарств</string>
    <string name="recommendation_reason">Причина: %s</string>
    <string name="recommendation_warning">Внимание: %s</string>
    <string name="recommendation_expired">Просрочено</string>
    
    <!-- Validation -->
    <string name="validation_required">Обязательное поле</string>
    <string name="validation_invalid_age">Некорректный возраст</string>
    <string name="validation_invalid_quantity">Некорректное количество</string>
    
    <!-- Success -->
    <string name="success_saved">Сохранено</string>
    <string name="success_deleted">Удалено</string>
    
    <!-- Symptoms -->
    <string name="symptoms_title">Мои симптомы</string>
    <string name="symptoms_empty">Нет симптомов</string>
    <string name="symptoms_empty_description">Добавьте симптомы для отслеживания</string>
    <string name="symptom_hint">Опишите симптом</string>
    <string name="symptom_add">Добавить симптом</string>
    <string name="symptom_added">Симптом добавлен</string>
    <string name="symptom_date_format">dd.MM.yyyy HH:mm</string>
    <string name="doctor_symptoms_title">Симптомы пациента</string>
    
    <!-- Doctor menu -->
    <string name="doctor_menu_medicine">Аптечка</string>
    <string name="doctor_menu_symptoms">Симптомы</string>
    <string name="doctor_menu_prescriptions">Назначения</string>
    <string name="doctor_menu_logout">Выход</string>
    <string name="doctor_prescriptions_title">Назначения пациента</string>
    <string name="doctor_prescriptions_empty">Нет активных назначений</string>
    
    <!-- Menu -->
    <string name="menu_generate_code">Код для врача</string>
    <string name="menu_logout">Выход</string>
    
    <!-- Errors -->
    <string name="error_generic">Произошла ошибка</string>
    <string name="error_invalid_code">Неверный или истёкший код</string>
    <string name="error_save_failed">Не удалось сохранить</string>
    <string name="error_delete_failed">Не удалось удалить</string>
    <string name="error_load_failed">Не удалось загрузить данные</string>

    <string name="symptom_renew">Сделать актуальным</string>
    <string name="symptom_renewed">Симптом обновлён</string>
    <string name="symptom_outdated_label">Неактуален</string>
    <string name="diagnose_button">Предположить диагноз</string>
    <string name="diagnose_error_no_symptoms">Для предположения диагноза необходимо ввести хотя бы 1 симптом</string>
    <string name="diagnose_error_all_outdated">Требуется хотя бы 1 актуальный симптом</string>
    <string name="diagnose_confirm">Подтвердить</string>
    <string name="diagnose_result_label">Предполагаемый диагноз:</string>
    <string name="diagnose_result_placeholder">Простуда</string>
    <string name="medicine_expired_label">Просрочено</string>
    <string name="recommendation_cabinet_header">Препараты из аптечки пациента</string>
    <string name="recommendation_other_header">Подходящие препараты</string>
    <string name="recommendation_in_cabinet">Есть в аптечке</string>
    <string name="prescription_dosage_title">Способ применения</string>
    <string name="prescription_frequency_label">Количество приемов в день</string>
    <string name="prescription_meal_timing_label">Время приема</string>
    <string name="prescription_time_offset_label">За/через сколько</string>
    <string name="prescription_custom_label">Или введите свой вариант</string>
    <string name="prescription_custom_hint">Например: 3 раза в день во время еды</string>
    <string name="prescription_add_button">Добавить к назначенным препаратам</string>
    <string name="prescription_added">Препарат назначен</string>
    <string name="active_substance_label">Действующее вещество:</string>
    <string name="prescriptions_title">Назначения</string>
    <string name="prescription_empty">Нет назначений</string>
    <string name="prescription_move_to_cabinet">Переместить в аптечку</string>
    <string name="prescription_moved">Перемещено в аптечку</string>
    <string name="prescription_date_label">Назначено:</string>
    <string name="menu_notifications">Настройка уведомлений</string>
    <string name="notifications_title">Настройка уведомлений</string>
    <string name="notifications_empty">Нет напоминаний</string>
    <string name="notifications_empty_description">Нажмите + чтобы добавить напоминание</string>
    <string name="notification_add">Добавить напоминание</string>
    <string name="notification_add_title">Новое напоминание</string>
    <string name="notification_select_time">Выберите время</string>
    <string name="notification_select_medicine">Препарат из аптечки</string>
    <string name="notification_custom_text_hint">Свой текст (необязательно)</string>
    <string name="notification_delete">Удалить</string>
    <string name="notification_added">Напоминание добавлено</string>
    <string name="notification_updated">Напоминание обновлено</string>
    <string name="notification_edit_title">Редактирование напоминания</string>
    <string name="notification_title">Напоминание</string>
    <string name="logout_dialog_title">Выход</string>
    <string name="logout_switch_profile">Сменить профиль</string>
    <string name="logout_sign_out">Выйти из аккаунта</string>
    <string name="local_mode_label">Локальный режим</string>
    <string name="google_sign_in_prompt">Авторизуйтесь через Google для сохранения данных на сервере</string>
    <string name="prescriptions_auth_required">Назначения доступны после авторизации через Google</string>
    <string name="code_auth_required">Генерация кода доступна после авторизации через Google</string>
    <string name="diagnose_title">Выберите симптомы</string>
    <string name="diagnose_questions_title">Уточните симптомы</string>
    <string name="diagnose_filter_actual">Только актуальные</string>
    <string name="diagnose_filter_all">Все симптомы</string>
    <string name="diagnose_select_all">Выбрать все</string>
    <string name="diagnosis_disclaimer">Результат носит информационный характер и не является медицинским диагнозом.</string>
    <string name="skip_auth">Продолжить без авторизации</string>
</resources>
