<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_symptoms"
        android:icon="@drawable/ic_thermometer"
        android:title="@string/symptoms_title"
        app:showAsAction="ifRoom" />
        
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile_title"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_generate_code"
        android:title="@string/menu_generate_code"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notifications"
        android:title="@string/menu_notifications"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>
